--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -59,12 +59,11 @@ select-fzf-bin = []
 ansi-escapes = "0.1"
 anyhow = "1.0"
 chbs = "0.1.0"
-clap = { version = "=3.0.0-beta.2", default-features = false, features = ["std", "suggestions", "color"] }
-clap_generate = "3.0.0-beta.2"
-colored = "2.0"
+clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "suggestions", "color"] }
+clap_generate = "3.0.0-beta.4"
+colored = "2.0.0"
 derive_builder = "0.10"
 edit = "0.1"
-lazy_static = "1.4"
 libc = "0.2"
 prs-lib = { version = "0.3.2", path = "../lib", default-features = false }
 rand = "0.8"
@@ -87,6 +86,9 @@ base64 = { version = "0.13", optional = true }
 # See ./src/vendor/shellexpand.rs
 # When removing, keep dirs-next, but only for Windows
 dirs-next = "2.0"
+shlex = "1.1.0"
+once_cell = "1.8.0"
+data-encoding = "2.3.2"
 # shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }
 
 # Clipboard support for non-X11/Wayland
