--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -42,7 +42,6 @@ _crypto-gpg = []
 [dependencies]
 anyhow = "1.0"
 git-state = "0.1"
-lazy_static = "1.4"
 secstr = "0.4"
 thiserror = "1.0"
 walkdir = "2.0"
@@ -63,6 +62,7 @@ regex = { version = "1.4", optional = true }
 # Vendored shellexpand fork until crate is updated
 # See ./src/vendor/shellexpand.rs
 dirs-next = "2.0"
+once_cell = "1.8.0"
 # shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }
 
 [dev-dependencies]
