--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -62,7 +62,7 @@ chbs = "0.1.0"
 clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "suggestions", "color"] }
 clap_generate = "3.0.0-beta.4"
 colored = "2.0.0"
-derive_builder = "0.10"
+derive_builder = "0.10.2"
 edit = "0.1"
 libc = "0.2"
 prs-lib = { version = "0.3.2", path = "../lib", default-features = false }
@@ -97,6 +97,12 @@ tracing = "0.1.26"
 tracing-subscriber = { version = "0.2", features = ["ansi"] }
 serde_yaml = "0.8.20"
 serde = "1.0.130"
+grep-searcher = "0.1.8"
+grep-printer = "0.1.6"
+grep-regex = "0.1.9"
+grep-cli = "0.1.6"
+termcolor = "1.1.2"
+atty = "0.2.14"
 
 # shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }
 
