--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -58,7 +58,7 @@ gpgme = { version = "0.10", optional = true }
 
 # Crypto backend: gnupg binary
 version-compare = { version = "0.0.11", optional = true }
-regex = { version = "1.4", optional = true }
+regex = { version = "1.5.4", optional = true }
 
 dirs-next = "2.0"
 once_cell = "1.8.0"
@@ -66,6 +66,10 @@ serde = "1.0.130"
 data-encoding = "2.3.2"
 serde_json = "1.0.67"
 tracing = "0.1.26"
+derive_builder = "0.10.2"
+strum_macros = "0.21.1"
+strum = "0.21.0"
+colored = "2.0.0"
 
 # Vendored shellexpand fork until crate is updated
 # See ./src/vendor/shellexpand.rs
