--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,11 +8,7 @@ homepage = "https://timvisee.com/projects/prs"
 repository = "https://gitlab.com/timvisee/prs"
 description = "Secure, fast & convenient password manager CLI with GPG & git sync"
 keywords = ["pass", "passwordstore"]
-categories = [
-    "authentication",
-    "command-line-utilities",
-    "cryptography",
-]
+categories = ["authentication", "command-line-utilities", "cryptography"]
 edition = "2018"
 default-run = "prs"
 
@@ -20,7 +16,17 @@ default-run = "prs"
 gitlab = { repository = "timvisee/prs", branch = "master" }
 
 [features]
-default = ["backend-gnupg-bin", "alias", "clipboard", "notify", "select-skim", "select-fzf-bin", "tomb"]
+default = [
+  "backend-gnupg-bin",
+  "alias",
+  "clipboard",
+  "notify",
+  "select-skim",
+  "select-fzf-bin",
+  "tomb",
+  "grep",
+  "otp",
+]
 
 ### Regular features
 
@@ -34,7 +40,7 @@ clipboard = ["copypasta-ext", "x11-clipboard", "base64"]
 notify = ["notify-rust"]
 
 # Option (default): tomb support for password store on Linux
-tomb = ["prs-lib/tomb","bytesize",  "fs_extra", "regex"]
+tomb = ["prs-lib/tomb", "bytesize", "fs_extra", "regex"]
 
 ### Pluggable cryptography backends
 
@@ -44,8 +50,13 @@ backend-gpgme = ["prs-lib/backend-gpgme"]
 # Option (default): GnuPG cryptography backend using gpg binary
 backend-gnupg-bin = ["prs-lib/backend-gnupg-bin"]
 
-### Pluggable interactive selection systems
+# Option (default): grep subcommand to search through password store
+grep = ["grep-searcher", "grep-printer", "grep-regex", "grep-cli", "termcolor", "atty"]
 
+# Option (default): otp code generator
+otp = ["data-encoding"]
+
+### Pluggable interactive selection systems ###
 # Option (default): interactive selection with skim (ignored on Windows)
 select-skim = ["skim"]
 
@@ -90,19 +101,24 @@ dirs-next = "2.0"
 shlex = "1.1.0"
 # Using instead of `lazy_static`
 once_cell = "1.8.0"
+
 # Used for `OTP` support
-data-encoding = "2.3.2"
+data-encoding = { version = "2.3.2", optional = true }
+
 # Debugging
 tracing = "0.1.26"
 tracing-subscriber = { version = "0.2", features = ["ansi"] }
+
 serde_yaml = "0.8.20"
 serde = "1.0.130"
-grep-searcher = "0.1.8"
-grep-printer = "0.1.6"
-grep-regex = "0.1.9"
-grep-cli = "0.1.6"
-termcolor = "1.1.2"
-atty = "0.2.14"
+
+# Grep subcommand
+grep-searcher = { version = "0.1.8", optional = true }
+grep-printer = { version = "0.1.6", optional = true }
+grep-regex = { version = "0.1.9", optional = true }
+grep-cli = { version = "0.1.6", optional = true }
+termcolor = { version = "1.1.2", optional = true }
+atty = { version = "0.2.14", optional = true }
 
 # shellexpand = { version = "*", git = "https://github.com/timvisee/shellexpand.git", branch = "windows-paths" }
 
@@ -112,12 +128,18 @@ copypasta-ext = { version = "0.3.4", optional = true, default-features = false, 
 
 # Clipboard support for X11/Wayland
 [target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten")), not(target_env = "musl")))'.dependencies]
-copypasta-ext = { version = "0.3.4", optional = true, default-features = false, features = ["x11-fork", "wayland-bin"] }
+copypasta-ext = { version = "0.3.4", optional = true, default-features = false, features = [
+  "x11-fork",
+  "wayland-bin",
+] }
 x11-clipboard = { version = "0.5", optional = true }
 
 # Clipboard support for X11/Wayland musl
 [target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten")), target_env = "musl"))'.dependencies]
-copypasta-ext = { version = "0.3.4", optional = true, default-features = false, features = ["x11-bin", "wayland-bin"] }
+copypasta-ext = { version = "0.3.4", optional = true, default-features = false, features = [
+  "x11-bin",
+  "wayland-bin",
+] }
 
 # Interactive selection with skim on unix platforms
 [target.'cfg(unix)'.dependencies]
